# AzureGovernance

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  t.parquet  test.bat
config/: __init__.py  scopes.py  settings.py
sql/ddl/: 001_dimensions.sql  002_facts.sql  003_closure.sql  004_effective.sql  005_indexes.sql
src/: __init__.py
src/auth/: __init__.py  credential_factory.py  msal_client.py  token_cache.py
src/etl/: __init__.py  access_paths.py  closure.py  effective_permissions.py  normalizer.py  snapshot.py  validation.py
src/extractors/: __init__.py  base.py
src/extractors/aas/: __init__.py  models.py
src/extractors/azure_rbac/: __init__.py  management_groups.py  resources.py  role_assignments.py  role_definitions.py  subscriptions.py
src/extractors/cosmosdb/: __init__.py  permissions.py
src/extractors/devops/: __init__.py  projects.py
src/extractors/entra/: __init__.py  groups.py  memberships.py  roles.py  service_principals.py  users.py
src/extractors/fabric/: __init__.py  item_permissions.py  powerbi.py  powerbi_permissions.py  workspaces.py
src/extractors/keyvault/: __init__.py  deep_permissions.py  vaults.py
src/extractors/networking/: __init__.py  access.py
src/extractors/sharepoint/: __init__.py  permissions.py  teams.py
src/extractors/sql/: __init__.py  connection.py  permissions.py
src/extractors/storage/: __init__.py  accounts.py  acls.py  containers.py
src/models/: __init__.py  assignments.py  enums.py  principals.py  resources.py  roles.py
src/orchestrator/: __init__.py  pipeline.py  subscription_scanner.py
src/storage/: __init__.py  database.py  parquet_writer.py  schema.py
src/utils/: __init__.py  id_generator.py  logging.py  pagination.py  rate_limiter.py  retry.py
tests/: __init__.py  conftest.py
tests/etl/: __init__.py  test_normalizer.py
tests/extractors/: test_aas_models.py  test_cosmosdb_networking.py  test_powerbi_permissions.py  test_sql_permissions.py  test_teams_permissions.py
tests/orchestrator/: __init__.py  test_pipeline.py  test_subscription_scanner.py
tests/utils/: __init__.py  test_utils.py
