[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eaip"
version = "0.1.0"
description = "Enterprise Access Intelligence Platform — extract, normalize, and analyze Microsoft 365 & Azure governance data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "EAIP Team" },
]
keywords = ["azure", "entra-id", "governance", "access-reviews", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    # Azure Identity & Auth
    "msal>=1.28.0",
    "azure-identity>=1.16.0",

    # Microsoft Graph
    "msgraph-sdk>=1.4.0",

    # Azure Management SDKs
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-managementgroups>=1.0.0",
    "azure-mgmt-keyvault>=10.3.0",
    "azure-mgmt-storage>=21.1.0",
    "azure-storage-file-datalake>=12.15.0",

    # Database & Analytics
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
    "duckdb-engine>=0.13.0",
    "pyarrow>=16.0.0",
    "pandas>=2.2.0",

    # Networking & Resilience
    "tenacity>=8.3.0",
    "httpx>=0.27.0",

    # Configuration & Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Logging
    "structlog>=24.1.0",

    # ODBC (SQL Server / DevOps)
    "pyodbc>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
eaip = "eaip.cli:main"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["eaip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["eaip"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
